--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "infoism-plugin-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.html",
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
