--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next": "^22.4.8",
     "i18next-vue": "^2.1.1",
     "marked": "^4.2.12",
+    "nanoid": "^4.0.1",
     "unocss": "^0.48.0",
     "vue": "^3.2.45"
   },
